# robot_manipulator

world_gen/: CMakeLists.txt  package.xml  setup.cfg  setup.py
world_gen/config/: config.rviz  joint_trajectory_controller.yaml
world_gen/launch/: launch_controller.launch.py  launch_gazebo.launch.py  launch_robot.launch.py
world_gen/models/: ur5e.sdf
world_gen/scripts/: tomato_gen.ipynb
world_gen/templates/tomato_model/{{cookiecutter.world_name}}/{{cookiecutter.model_name}}/: model.sdf
world_gen/templates/tomato_world/{{cookiecutter.world_name}}/: {{cookiecutter.world_name}}.sdf
world_gen/templates/tomato_world/{{cookiecutter.world_name}}/ground/: model.sdf
world_gen/urdf/: ur5e.urdf
