<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>world_gen</name>
  <version>0.0.0</version>
  <description>Generation of worlds</description>
  <maintainer email="angeloob11@gmail.com">angel</maintainer>
  <license>Apache licence 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>urdf</depend>              
  <depend>rviz2</depend>        
  <depend>robot_state_publisher</depend> 
  <depend>joint_state_publisher</depend> 
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>launch</depend> 

  <export>
    <build_type>ament_cmake</build_type> 
  </export>
</package>
